2007-02-26    <tino@firebird.03.softkill.net>

	* ptybuffer.c (file_open, file_flush_close, file_timestamp): added
	(file_out): timestamping added

2006-12-02    <tino@firebird.03.softkill.net>

	* ptybuffer.c (master_process, log_childstatus): logging made more
	clear

2006-11-11    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main): realpath added to logfile and outfile.

2006-08-11    <tino@firebird.03.softkill.net>

	* ptybuffer.c: dirty.h removed, so changed all occurences of
	"dirty" names to the full name.
	(main): renamed HISTORY_LENGTH to PTYBUFFER_HISTORY_LENGTH
	(main): typo corrected which always gave "missing command" if
	option -c was not present.
	(daemonloop): now return void

2006-07-26    <tino@firebird.03.softkill.net>

	* ptybuffer.c (ptybuffer_new_fd, main): history_tail added (option -t)
	(main): options check (-c) and force (-f) added

2006-04-12    <tino@firebird.03.softkill.net>

	* ptybuffer.c (daemonloop): A little typo (wrong cb function) make
	ptybuffer segfault.  This shows that the abstraction level of
	tino/sock.h is not high enough yet.

2006-01-30    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main, daemonloop, master_process): option -n hist

2005-06-04    <tino@firebird.03.softkill.net>

	* ptybuffer.c (connect_process): snprintf instead of sprintf

2004-11-12    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main): SIGSEV corrected
	(main): more logging added and output clarified

2004-10-01    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main): A lot of more options added.
	(file_out, file_log): Added logging at various places.

2004-09-20    <tino@firebird.03.softkill.net>

	* test.sh: set added, to see new environment variable
	PTYBUFFER_PID

	* ptybuffer.c: Option -d disabled daemonization, such that you can
	easily run programs under ptybuffer from /etc/inittab or similar.
	(master_process): Minor Bugfix (found at code review): When not
	all data could be delivered to the terminal at once, some data