@@ -1,3 +1,13 @@
+2007-03-26    <tino@firebird.03.softkill.net>
+
+	* script/autostart.sh (log): added better logging
+	(RUNDIR): in Shell && does not bind tighter than ||, fixed
+
+	* ptybuffer.c (main, file_timestamp): pid reset to show correct
+	PID after forks
+	(file_timestamp): output corrrected to what it ought to be
+	(main): logfile paths are now logged (in case realpath fails)
+
 2007-02-26    <tino@firebird.03.softkill.net>
 
 	* ptybuffer.c (file_open, file_flush_close, file_timestamp): added
